--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="head">
-            <a href="fitness zone.html"><img src="images/back.png" width="70" height="70"></a> 
+            <a href="index.html"><img src="images/back.png" width="70" height="70"></a> 
         </div>
         <div class="container">
           
