--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <h1 >OUR GYM</h1>
         <nav>
             <ul>
-                <li><a href="fitness zone.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
